[project]
name = "nb-clean"
version = "4.0.1"
description = "Clean Jupyter notebooks for versioning"
authors = [{ name = "Scott Stevenson", email = "scott@stevenson.io" }]
readme = "README.md"
license = "ISC"
requires-python = ">=3.9"
keywords = ["jupyter", "notebook", "clean", "filter", "git"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
]
dependencies = ["nbformat>=5.9.2"]

[project.urls]
Homepage = "https://github.com/srstevenson/nb-clean"
Repository = "https://github.com/srstevenson/nb-clean"
Issues = "https://github.com/srstevenson/nb-clean/issues"

[project.scripts]
nb-clean = "nb_clean.cli:main"

[dependency-groups]
dev = [
  "coverage>=7.6.10",
  "mypy>=1.4",
  "pytest>=7.2.1",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.1",
  "ruff>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
enable_error_code = ["ignore-without-code"]
no_implicit_optional = true
show_error_codes = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov=nb_clean --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "C901",
  "COM812",
  "D203",
  "D213",
  "E501",
  "INP001",
  "ISC001",
  "PLR0912",
  "PLR0913",
  "PLR2004",
  "RET504",
  "S101",
  "S603",
  "S607",
  "T201",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
