[project]
name = "nb-clean"
version = "4.0.1"
description = "Clean Jupyter notebooks for versioning"
authors = [{ name = "Scott Stevenson", email = "scott@stevenson.io" }]
readme = "README.md"
license = "ISC"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["jupyter", "notebook", "clean", "filter", "git"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
]
dependencies = ["nbformat>=5.9.2"]

[project.urls]
Homepage = "https://github.com/srstevenson/nb-clean"
Repository = "https://github.com/srstevenson/nb-clean"
Issues = "https://github.com/srstevenson/nb-clean/issues"

[project.scripts]
nb-clean = "nb_clean.cli:main"

[dependency-groups]
dev = [
  "basedpyright>=1.31.1",
  "coverage>=7.6.10",
  "pytest>=7.2.1",
  "pytest-mock>=3.11.1",
  "ruff>=0.1.6",
  "typing-extensions>=4.14.1",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.10"]
build-backend = "uv_build"

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.basedpyright]
typeCheckingMode = "recommended"
reportUnusedCallResult = false

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "C901",
  "COM812",
  "D203",
  "D213",
  "E501",
  "INP001",
  "ISC001",
  "PLR0912",
  "PLR0913",
  "PLR2004",
  "RET504",
  "S101",
  "S603",
  "S607",
  "T201",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["D"]
